# imtools

./: .gitignore  README.md  pyproject.toml
src/imtools/: __init__.py  autowb.py  autowb_cli.py  crop.py  imgio.py  models.py
src/imtools/cli/: autowb_cli.py  crop_to_ratio_cli.py
tests/: test_autowb.py  test_crop.py
