[project]
name = "imtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ffsedd", email = "ffsedd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "scikit-image>=0.25.2",
]


[project.scripts]
autowb = "imtools.autowb_cli:main"
croptoratio = "imtools.crop_to_ratio_cli:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "skimage.*"
ignore_missing_imports = true